# networks-course

./: .gitmodules
lab01/: lab01.md
lab02/: lab02.md
lab02/lab02/: build.gradle.kts  settings.gradle.kts
lab02/lab02/src/main/kotlin/org/spbu/networks/: Application.kt  Model.kt  Utils.kt
lab02/lab02/src/main/resources/: application.yaml
lab03/: lab03.md
lab03/server/: CMakeLists.txt
lab03/server/src/: main.cpp
lab04/: lab04.md
lab05/: lab05.md  plot-cs.py  plot-p2p.py
lab05/remote-exec/: client.py  server.py
lab05/udp-broadcast/: server.py
lab06/: 1.txt  ftpclient.py  lab06.md
lab07/: lab07.md
lab07/udp-client/: Cargo.toml
lab07/udp-client/src/: main.rs
lab07/udp-server/: Cargo.toml
lab07/udp-server/src/: main.rs
lab08/: lab08.md
lab08/stop-and-wait/: connection.py
lab08/stop-and-wait-cpp/: client.py  data.md  main  receive  receive.cpp  send  send.cpp  swsocket.h
lab09/: lab09.md
lab10/: lab10.md
lab11/: lab11.md
lab11/dvr/: dvr.h  log  main  main.cpp
lab12/: lab12.md
lab12/rip/: main  main.cpp  net.tsv  rip.h
lab13/: lab13.md
lab14/: lab14.md
